2010-07-13  Chris Guillory  <chris.guillory@google.com>

Reviewed by David Levin.

        Fix adoptRef usage violation in WebAccessibilityCacheImpl.cpp.
        https://bugs.webkit.org/show_bug.cgi?id=42092

        * src/WebAccessibilityCacheImpl.cpp:
        (WebKit::WebAccessibilityCacheImpl::WeakHandle::create):
        (WebKit::WebAccessibilityCacheImpl::WeakHandle::WeakHandle):

Canonical link: https://commits.webkit.org/54110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63258 268f45cc-cd09-0410-ab3c-d52691b4dbfc