WebKit/chromium/src/WebAccessibilityCacheImpl.cpp
@@ -64,14 +64,15 @@ WebAccessibilityCache* WebAccessibilityCache::create()
 PassRefPtr<WebAccessibilityCacheImpl::WeakHandle> WebAccessibilityCacheImpl::WeakHandle::create(AccessibilityObject* object)
 {
     // FIXME: Remove resetting ref-count from AccessibilityObjectWrapper
-    // and convert to use adoptRef.
-    return new WebAccessibilityCacheImpl::WeakHandle(object);
+    RefPtr<WebAccessibilityCacheImpl::WeakHandle> weakHandle = adoptRef(new WebAccessibilityCacheImpl::WeakHandle(object));
+    weakHandle->m_object->setWrapper(weakHandle.get());
+    
+    return weakHandle.release();
 }
 
 WebAccessibilityCacheImpl::WeakHandle::WeakHandle(AccessibilityObject* object)
     : AccessibilityObjectWrapper(object)
 {
-    m_object->setWrapper(this);
 }
 
 // WebAccessibilityCacheImpl ----------------------------------------
